--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "chai": "^3.5.0",
         "mocha": "^3.2.0",
         "mocha-jenkins-reporter": "^0.3.12",
-        "supertest": "^3.0.0"
+        "supertest": "^3.0.0",
+        "express": "^4.16.1"
     },
     "scripts": {
         "start": "JUNIT_REPORT_PATH=test-result/result.xml JUNIT_REPORT_STACK=1 mocha --timeout 25000 --colors --reporter mocha-jenkins-reporter || true"
